--- a/documentation/css/paper-kit.css
+++ b/documentation/css/paper-kit.css
@@ -2593,7 +2593,7 @@ textarea.form-control {
   padding-top: 10px;
 }
 .card.no-transition:hover, .card.card-register:hover, .card.page-carousel:hover {
-  box-shadow: 0 6px 10px -4px rgba(255, 255, 255, 0.15);
+  box-shadow: 0 6px 10px -4px rgba(0, 0, 0, 0.15);
   transform: none;
   -webkit-transform: none;
   -ms-transform: none;
@@ -2647,7 +2647,7 @@ textarea.form-control {
 }
 
 .card-register {
-  background-color: #e97e1900;
+  background-color: #FF8F5E;
   border-radius: 8px;
   color: #fff;
   max-width: 350px;
