Ajout page d'accueil

--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -1,3 +1,65 @@
-<div class="section" style="background-image: url('assets/img/antoine-barres.jpg')">
-    <p> eziugfzhenofilknez,fmlzek,gfjkdn,zejkc </p>
+<div class="main" style="background-image: url('assets/img/antoine-barres.jpg');padding-bottom: 1%;" align="center">
+    <div class="section" style="margin-top: 7%;background-color: black ;margin-right: 5%;margin-left: 5%;padding-top: 2%">
+        <div class="row">
+            <div class="col-md-5" style="margin-right:0px;margin-left: 10%">
+                <h1 style="margin-bottom: 3%;margin-top: 0%">Laissez vous guider</h1>
+                <p style="color:white;">Et quia Montius inter dilancinantium manus spiritum efflaturus Epigonum et 
+                    Eusebium nec professionem nec dignitatem ostendens aliquotiens increpabat, 
+                    qui sint hi magna quaerebatur industria, et nequid intepesceret, Epigonus e
+                    Lycia philosophus ducitur et Eusebius ab Emissa Pittacas cognomento, concitatus 
+                    orator, cum quaestor non hos sed tribunos fabricarum insimulasset promittentes 
+                    armorum si novas res agitari conperissent.
+                    Novitates autem si spem adferunt, ut tamquam in herbis non fallacibus 
+                    fructus appareat, non sunt illae quidem repudiandae, vetustas tamen suo loco conservanda; maxima est enim vis vetustatis et consuetudinis. Quin in ipso equo, cuius modo feci mentionem, si nulla res impediat, nemo est, quin eo, quo consuevit, libentius utatur quam intractato et novo. Nec vero in hoc quod est animal, sed in iis etiam quae sunt inanima, consuetudo valet, cum locis ipsis delectemur, montuosis etiam et silvestribus, in quibus diutius commorati sumus.                
+                    Nemo quaeso miretur, si post exsudatos labores itinerum longos congestosque 
+                    adfatim commeatus fiducia vestri ductante barbaricos pagos adventans velut 
+                    mutato repente consilio ad placidiora deverti.</p>
+            </div>
+            <div  class="col-md-5" style="margin-left:0%;margin-right:10%px;" align="center">
+                <img src="https://jeromeobiols.com/wordpress/wp-content/uploads/30122016_JOB5054F_Lever_Brenva-1920.jpg" style="width:100%"/>
+            </div>
+        </div>
+    </div>
+    <div class="section" style="margin-top: 10%;background-color: black;margin-right: 5%;margin-left: 5%;padding-top: 2%">
+        <h1 style="margin-bottom: 3%;margin-top: 0%;">On vous recommande</h1>
+        <div class="row">
+            <div class="col-md-5" style="margin-right:0px;margin-left: 10%;">
+                <p style="color:white">Et quia Montius inter dilancinantium manus spiritum efflaturus Epigonum et 
+                    Eusebium nec professionem nec dignitatem ostendens aliquotiens increpabat, 
+                    qui sint hi magna quaerebatur industria, et nequid intepesceret, Epigonus e
+                    Lycia philosophus ducitur et Eusebius ab Emissa Pittacas cognomento, concitatus 
+                    orator, cum quaestor non hos sed tribunos fabricarum insimulasset promittentes 
+                    armorum si novas res agitari conperissent.
+                    Novitates autem si spem adferunt, ut tamquam in herbis non fallacibus 
+                    fructus appareat, non sunt illae quidem repudiandae, vetustas tamen suo loco conservanda; maxima est enim vis vetustatis et consuetudinis. Quin in ipso equo, cuius modo feci mentionem, si nulla res impediat, nemo est, quin eo, quo consuevit, libentius utatur quam intractato et novo. Nec vero in hoc quod est animal, sed in iis etiam quae sunt inanima, consuetudo valet, cum locis ipsis delectemur, montuosis etiam et silvestribus, in quibus diutius commorati sumus.                
+                    Nemo quaeso miretur, si post exsudatos labores itinerum longos congestosque 
+                    adfatim commeatus fiducia vestri ductante barbaricos pagos adventans velut 
+                    mutato repente consilio ad placidiora deverti.</p>
+            </div>
+            <div  class="col-md-5" style="margin-left:0%;margin-right:10%px" align="center">
+                <img src="https://jeromeobiols.com/wordpress/wp-content/uploads/30122016_JOB5054F_Lever_Brenva-1920.jpg" style="width:100%"/>
+            </div>
+        </div>
+    </div>
+    <div class="section" style="margin-top: 10%;margin-bottom:5%;background-color: black;margin-right: 5%;margin-left: 5%;padding-top: 2%">
+        <div class="row">
+            <div class="col-md-5" style="margin-right:0px;margin-left: 10%;">
+                <h1 style="margin-bottom: 3%;margin-top: 0%;">On vous raconte</h1>
+                <p style="color:white">Et quia Montius inter dilancinantium manus spiritum efflaturus Epigonum et 
+                    Eusebium nec professionem nec dignitatem ostendens aliquotiens increpabat, 
+                    qui sint hi magna quaerebatur industria, et nequid intepesceret, Epigonus e
+                    Lycia philosophus ducitur et Eusebius ab Emissa Pittacas cognomento, concitatus 
+                    orator, cum quaestor non hos sed tribunos fabricarum insimulasset promittentes 
+                    armorum si novas res agitari conperissent.
+                    Novitates autem si spem adferunt, ut tamquam in herbis non fallacibus 
+                    fructus appareat, non sunt illae quidem repudiandae, vetustas tamen suo loco conservanda; maxima est enim vis vetustatis et consuetudinis. Quin in ipso equo, cuius modo feci mentionem, si nulla res impediat, nemo est, quin eo, quo consuevit, libentius utatur quam intractato et novo. Nec vero in hoc quod est animal, sed in iis etiam quae sunt inanima, consuetudo valet, cum locis ipsis delectemur, montuosis etiam et silvestribus, in quibus diutius commorati sumus.                
+                    Nemo quaeso miretur, si post exsudatos labores itinerum longos congestosque 
+                    adfatim commeatus fiducia vestri ductante barbaricos pagos adventans velut 
+                    mutato repente consilio ad placidiora deverti.</p>
+            </div>
+            <div  class="col-md-5" style="margin-left:0%;margin-right:10%px;" align="center">
+                <img src="https://jeromeobiols.com/wordpress/wp-content/uploads/30122016_JOB5054F_Lever_Brenva-1920.jpg" style="width:100%"/>
+            </div>
+        </div>
+    </div>
 </div>
